--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
-Django
-djangorestframework
-django-braces
+Django~=4.1.4
+redis
 channels
 requests
 django-crispy-forms
 redisboard
 hypercorn
 gunicorn
+pip
+attrs
+wheel
+cryptography==39.0.0
+tornado~=6.2
+packaging==23.0
+pyparsing~=3.0.9
+python-dotenv~=0.21.0
+psycopg2
+daphne
+crispy-bootstrap5
+django-redisboard
+channels-redis
+uwsgi
+django-embed-video
+django-debug-toolbar
+djangorestframework
+django-braces
