--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -4,18 +4,18 @@ upstream uwsgi_app {
 }
 
 server {
-    listen 80;
+    listen      80;
     server_name www.learninade.com learninade.com;
-    error_log stderr warn;
-    access_log /dev/stdout main;
+    error_log   stderr warn;
+    access_log  /dev/stdout main;
 
     location / {
-        include /etc/nginx/uwsgi_params;
-        uwsgi_pass uwsgi_app;
+        include         /etc/nginx/uwsgi_params;
+        uwsgi_pass      uwsgi_app;
     }
 
     location /static/ {
-        alias /code/edufy/static/;
+        alias /code/static/;
     }
 
     location /media/ {
