--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,11 +1,10 @@
 [uwsgi]
-http-socket=/code/uwsgi_app.sock
+socket=/code/uwsgi_app.sock
 chdir = /code/
 module=LEARNIFY.wsgi:application
 master=true
-chmod-socket=777
+chmod-socket=666
 uid=www-data
 gid=www-data
 vacuum=true
-enable-threads=true
-thunder-lock=true
+wsgi-file=LEARNIFY/wsgi.py
